terraform/modules/vpc/nat_gateway.tf
# ============================================================================
# NAT Gateway
# ============================================================================

# 공인 IP 할당
resource "aws_eip" "nat_gateway" {
  count  = local.actual_nat_type == "gateway" ? local.nat_count : 0
  domain = "vpc"

  # 태그
  tags = merge(
    var.common_tags,
    {
      Name = "${var.project_name}-${var.infra_version}-${var.environment}-nat-gw-eip-${count.index + 1}"
    }
  )

  depends_on = [aws_internet_gateway.this]
}

# NAT Gateway
resource "aws_nat_gateway" "this" {
  count         = local.actual_nat_type == "gateway" ? local.nat_count : 0
  allocation_id = aws_eip.nat_gateway[count.index].id
  subnet_id     = aws_subnet.public[count.index].id

  # 태그
  tags = merge(
    var.common_tags,
    {
      Name = "${var.project_name}-${var.infra_version}-${var.environment}-nat-gw-${count.index + 1}"
    }
  )

  depends_on = [aws_internet_gateway.this]
}
